# leptos-tailwind-template

./: Cargo.toml  README.md  index.html  leptosfmt.toml  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
src/: app.rs  main.rs
